# backend/docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/api/fares": {
             "get": {
-                "description": "Get IC card and ticket fare between two stations.",
+                "description": "Get IC card and ticket fare between two stations",
                 "produces": [
                     "application/json"
                 ],
@@ -107,6 +107,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "odpt.Railway:Toei.Asakusa",
                         "description": "Route ID",
                         "name": "routeId",
                         "in": "path",
@@ -156,6 +157,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "odpt.Station:Toei.Asakusa.Shimbashi",
                         "description": "Station ID",
                         "name": "stationId",
                         "in": "path",
@@ -233,6 +235,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "example": "1965Ka",
                         "description": "Train Number",
                         "name": "trainNumber",
                         "in": "path",
@@ -257,6 +260,15 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
